2005-11-30 Perry
 PATCH: [ 1369657 ] Delete unused variable DiffFuncStruct::msgStatusUpdate
  Src/DiffThread.cpp

2005-11-30 Kimmo
 PATCH: [ 1369544 ] Catalan translation update
  Submitted by Jordi Vilar
  Docs/Users/Languages: ReadMe-Catalan.txt
  Src/Languages/Catalan: MergeCatalan.rc
 PATCH: [ 1265295 ] Swap file compare panes (use pointers for buffers)
  Forgot to update resource.h in language folders
  Src/Languages: resource.h


2005-11-30 Perry
 Cosmetic: add comment to DiffThread giving value of msgID variable
  (to help debugging).
  Src: DiffThread.cpp

2005-11-28 Perry
 BUG: [ 1368492 ] cvs ASSERT failing
 Fix reversion bug from Patch [ 1265295 ]

2005-11-28 Kimmo
 PATCH: [ 1265295 ] Swap file compare panes (use pointers for buffers)
  Submitted by Takashi Sawanaka
  Src: ChildFrm.cpp DiffList.cpp DiffList.h DirDoc.cpp EditorFilepathBar.cpp
   EditorFilepathBar.h LocationView.cpp LocationView.h MainFrm.cpp Merge.rc
   MergeDiffDetailView.cpp MergeDiffDetailView.h MergeDoc.cpp MergeDoc.h
   MergeDocLineDiffs.cpp MergeEditView.cpp MergeEditView.h PathContext.cpp
   PathContext.h resource.h
  Src/Languages: *.rc resource.h

2005-11-28 Perry
 PATCH: [ 1336598 ] Add extensions DisplayXMLFiles plugin
 Add several new extensions, bump version (1.0.2.0 -> 1.0.3.0)
  Plugins\src_VCPP\DisplayXMLFiles:
   DisplayXMLFiles.dsp DisplayXMLFiles.rc WinMergeScript.cpp
  Plugins\dlls:
   DisplayXMLFiles.dll

2005-11-26 Perry
 PATCH: [ 1241935 ] Implement Line Diff coloring on byte diffs
  Src: MergeDoc.cpp MergeDoc.h MergeDocLineDiffs.cpp PropEditor.cpp

2005-11-23 WinMerge experimental release 2.5.0.2 (cvs)

2005-11-22 Tim
 PATCH: [ 1363114 ] Add '*.ctl;*.pag;*.dsr' to Visual Basic highlighter
  Src/editlib: ccrystaltextview.cpp

2005-11-22 Kimmo
 PATCH: [ 1362882 ] Remove option for autoclosing compare statepane
  Src: Merge.rc OptionsDef.h OptionsInit.cpp PropGeneral.cpp PropGeneral.h resource.h
  Src/Languages: *.rc resource.h